# irate_transform_gizmo

./: Cargo.toml  README.md
examples/: demo.rs  demo_2d.rs  parenting.rs
src/: gizmo_material.rs  lib.rs  normalization.rs  picking.rs
src/mesh/: mod.rs  truncated_torus.rs
