[package]
name = "irate_transform_gizmo"
version = "0.1.0"
edition = "2021"
description = "A transform gizmo for Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/irate-devil/irate_transform_gizmo"
documentation = "https://docs.rs/irate_transform_gizmo"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
] }
bevy_mod_picking = { version = "0.17", default-features = false, features = [
    "selection",
] }
bevy_mod_raycast = "0.16"

[dev-dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "bevy_pbr",
    "bevy_winit",
    "x11",
    "tonemapping_luts",
    "ktx2",
    "zstd",
] }
bevy_mod_picking = { version = "0.17", default-features = false, features = [
    "selection",
    "backend_raycast",
    "highlight",
    "bevy_picking_raycast",
] }
